LabasCode/netenv/4-adv-network/CCA/3-Network-Policy/2-Network-Policy-Use-Cases/1-L3-CNP/2-egress/2-egress-allow-only-client-dev-to-client-prod.yaml
# https://github.com/cilium/cilium/blob/main/examples/policies/l3/simple/l3_egress.yaml
# 1. client-dev pod
apiVersion: v1
kind: Pod
metadata:
  labels:
    env: client-dev
  name: client-dev
spec:
  containers:
  - image: 192.168.2.100:5000/nettool
    name: client-dev

---
apiVersion: v1
kind: Pod
metadata:
  labels:
    env: client-prod
  name: client-prod
spec:
  containers:
  - image: 192.168.2.100:5000/nettool
    name: client-prod
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    env: nettool
  name: nettool
spec:
  containers:
  - image: 192.168.2.100:5000/nettool
    name: nettool

---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "l3-egress-rule"
spec:
  endpointSelector:
    matchLabels:
      env: client-dev  # 作用目标：所有标签为 env=client-dev 的 Pod
  egress:
  - toEndpoints:
    - matchLabels:
        env: client-prod  # 允许的出站目标：标签为 env=client-prod 的 Pod
